--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -165,7 +165,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
-          ref: dev
+          ref: v3
           path: packages/cli/tests/e2e/resource
 
       - name: run test
