--- a/packages/api2teams/.vscode/launch.json
+++ b/packages/api2teams/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch new command (non-interactive)",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/cli.js",
-      "args": ["myargs"],
+      "args": ["myargs", "-f"],
       "outFiles": [
         "${workspaceFolder}/lib/**/*.js",
       ],
