--- a/packages/api2teams/package.json
+++ b/packages/api2teams/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf lib && tsc -p ./",
     "package": "rimraf lib && webpack --mode production --config ./webpack.config.js",
     "lint": "eslint . --ext .ts",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "prettier": "prettier --write \"src/**/*.ts\""
   },
   "bin": {
     "api2teams": "./cli.js"
@@ -27,14 +28,21 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.2",
+    "@types/sinon": "^10.0.14",
+    "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "chai": "^4.3.7",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "openapi-types": "^7.2.3",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.0",
+    "sinon": "^15.0.4",
+    "sinon-chai": "^3.7.0",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
