--- a/packages/api2teams/package.json
+++ b/packages/api2teams/package.json
@@ -6,7 +6,7 @@
   "author": "Microsoft Corporation",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf lib && tsc -p ./",
+    "build": "rimraf lib && tsc -p ./ && copyfiles -u 1 src/**/*.txt lib",
     "package": "rimraf lib && webpack --mode production --config ./webpack.config.js",
     "lint": "eslint . --ext .ts",
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
@@ -22,24 +22,26 @@
     "@apidevtools/swagger-parser": "^10.1.0",
     "commander": "^10.0.0",
     "fs-extra": "^11.1.0",
+    "prettier": "^2.8.8",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.2",
+    "@types/prettier": "^2.7.2",
     "@types/sinon": "^10.0.14",
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "chai": "^4.3.7",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "openapi-types": "^7.2.3",
-    "prettier": "^2.8.8",
     "rimraf": "^3.0.0",
     "sinon": "^15.0.4",
     "sinon-chai": "^3.7.0",
