--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -55,7 +55,7 @@
 /packages/sdk/test/unit/node/conversation @kimizhu @swatDong @a1exwang @XiaofuHuang @dooriya
 
 /packages/fx-core/resource/package.nls.json @timngmsft @sffamily @therealjohn
-/packages/fx-core/resource/yaml.schema.json @1yefuwang1 @wenytang @kuojianlu @Siglud
+/packages/fx-core/resource/yaml.schema.json @1yefuwang1 @wenytang-ms @kuojianlu @Siglud
 /packages/fx-core/src/core @jayzhang @LongOddCode @1yefuwang1 @nliu-ms @xzf0587 @hund030
 /packages/fx-core/src/core/middleware/projectMigrator.ts @dooriya @qinezh @a1exwang @blackchoey @wenytang-ms
 
