--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -180,6 +180,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "proxyquire": "^2.1.3",
+    "rewire": "^6.0.0",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
     "tmp": "^0.2.1",
