--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -150,6 +150,7 @@
     "@types/node": "^14.14.21",
     "@types/node-forge": "^0.9.7",
     "@types/proxyquire": "^1.3.28",
+    "@types/rewire": "^2.5.28",
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.9",
