--- a/packages/api2teams/package.json
+++ b/packages/api2teams/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
+    "@types/fs-extra": "^11.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.2",
     "@types/prettier": "^2.7.2",
