--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -97,6 +97,7 @@
     "glob": "^7.1.6",
     "got": "^11.8.2",
     "handlebars": "^4.7.7",
+    "iconv-lite": "^0.6.3",
     "ignore": "^5.1.8",
     "js-base64": "^3.6.0",
     "js-yaml": "^4.0.0",
