--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@fluentui/react-components": "^9.15.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.3-rc",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^2.0.0",
     "@microsoft/teamsfx": "^2.2.1",
