--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -70,7 +70,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.14.1",
     "@microsoft/api-extractor": "^7.19.4",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.2",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.3-rc",
     "@microsoft/teams-js": "^2.7.1",
     "@rollup/plugin-json": "^4.1.0",
     "@types/chai": "^4.2.22",
