--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -175,7 +175,7 @@ jobs:
           path: packages/cli/tests/e2e/resource
       
       - name: Download samples from another repo
-        if: github.event_name == 'schedule' && startsWith(matrix.cases, './samples/') && contains(matrix.test-case, 'ProactiveMessage') == false
+        if: github.event_name == 'schedule' && startsWith(matrix.cases, './samples/') && contains(matrix.test-case, 'ProactiveMessage')
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/Microsoft-Teams-Samples
