--- a/templates/package.json
+++ b/templates/package.json
@@ -45,6 +45,7 @@
         "@typescript-eslint/parser": "^4.19.0",
         "eslint": "^7.22.0",
         "eslint-config-react-app": "^7.0.0",
+        "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-no-secrets": "^0.8.9",
         "eslint-plugin-prettier": "^4.0.0",
