--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -54,6 +54,7 @@
     "test:question": "nyc mocha \"tests/question/*.test.ts\"",
     "test:coll": "nyc mocha \"tests/core/collaborator.test.ts\"",
     "test:specParser": "npx mocha \"tests/common/spec-parser/**/specParser.test.ts\"",
+    "test:error": "nyc mocha \"tests/error/*.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
