--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -282,6 +282,6 @@ jobs:
     if: ${{ github.event_name ==  'pull_request' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: cuichenli/enforce-codeowner@1.0.0
+      - uses: cuichenli/enforce-codeowner@
         env:
           GITHUB_TOKEN: '{{ secrets.GITHUB_TOKEN }}'
