--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -282,6 +282,10 @@ jobs:
     if: ${{ github.event_name ==  'pull_request' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: cuichenli/enforce-codeowner@v1
-        env:
-          GITHUB_TOKEN: '{{ secrets.GITHUB_TOKEN }}'
+      - uses: actions/checkout@v3
+      - id: changed-files
+        uses: tj-actions/changed-files@v29.0.3
+      - uses: austenstone/codeowners-coverage@main
+        with:
+          ignore-default: 'true'
+          files: ${{ steps.changed-files.outputs.all_changed_files }}
