--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -283,9 +283,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - id: changed-files
-        uses: tj-actions/changed-files@v29.0.3
+      - name: Get changed files in the docs folder
+        id: changed-files-specific
+        uses: tj-actions/changed-files@v37
+        with:
+          files: ./*.{ts, js, yml, html, tpl, json}
+
       - uses: austenstone/codeowners-coverage@main
         with:
           ignore-default: 'true'
-          files: ${{ steps.changed-files.outputs.all_changed_files }}
+          files: ${{ steps.changed-files-specific.outputs.all_changed_files }}
