--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/eslint-plugin-teamsfx": "^0.0.3",
+    "@microsoft/metrics-ts": "0.0.4",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/express": "^4.17.14",
