--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -43,6 +43,9 @@ jobs:
         run: |
           npm config set legacy-peer-deps true
 
+      - name: manage pkgs to release
+        run: bash .github/scripts/lerna.sh tests
+
       - name: Setup project
         uses: nick-fields/retry@v2
         with:
@@ -50,19 +53,6 @@ jobs:
           max_attempts: 5
           command: |
             npm run setup-metrics
-
-      - name: Package CLI
-        working-directory: packages/cli
-        run: |
-          rm -f *.tgz
-          npm pack
-          mv *.tgz teamsfx-cli.tgz
-
-      - name: Upload to artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: Teamsfx-cli
-          path: ./packages/cli/teamsfx-cli.tgz
 
       - name: List cases for schedule
         id: schedule-cases
@@ -145,6 +135,9 @@ jobs:
           sudo apt-get install azure-functions-core-tools-4
           which func
           func --version
+
+      - name: manage pkgs to release
+        run: bash .github/scripts/lerna.sh tests
 
       - name: Setup legacy-peer-deps
         run: |
