--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -265,7 +265,7 @@ jobs:
         with:
           node-version: 14
       - name: lerna expect rc version
-        if: ${{ github.event.pull_request.base.ref == 'main' }}
+        # if: ${{ github.event.pull_request.base.ref == 'main' }}
         run: |
           npx lerna version --conventional-commits --conventional-prerelease --preid=rc --no-git-tag-version --allow-branch ${{ steps.branch-name.outputs.current_branch }} --yes
           npx lerna changed -l | awk '{ print $1 "\t" $2 }'> version_info.txt
